// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/SkipLink SkipLinkWithDefaultBehaviourDisabled smoke-test 1`] = `
<div class="nhsuk-hint">
  Press
  <span style="font-family: monospace; margin-left: 5px; margin-right: 5px; font-size: 14px; padding: 3px; background-color: rgba(255, 0, 0, 0.15); border-radius: 5px;">
    tab
  </span>
  to show the SkipLink
</div>
<a class="nhsuk-skip-link"
   tabindex="0"
>
  Skip to main content
</a>
`;

exports[`Components/SkipLink Standard smoke-test 1`] = `
<div class="nhsuk-hint">
  Press
  <span style="font-family: monospace; margin-left: 5px; margin-right: 5px; font-size: 14px; padding: 3px; background-color: rgba(255, 0, 0, 0.15); border-radius: 5px;">
    tab
  </span>
  to show the SkipLink
</div>
<a class="nhsuk-skip-link"
   href="#maincontent"
   tabindex="0"
>
  Skip to main content
</a>
`;
